--- a/msvc-gateway-server/src/main/resources/application.yml
+++ b/msvc-gateway-server/src/main/resources/application.yml
@@ -1,3 +1,25 @@
+resilience4j:
+  circuitbreaker:
+    configs:
+      default:
+        registerHealthIndicator: true
+        sliding-window-size: 6
+        failure-rate-threshold: 5
+        wait-duration-in-open-state: 20s
+        permitted-number-of-calls-in-half-open-state: 4
+        slow-call-duration-threshold: 2s
+        slow-call-rate-threshold: 50
+    instances:
+      products:
+        baseConfig: default
+  timelimiter:
+    configs:
+      default:
+        timeout-duration: 3s
+    instances:
+      products:
+        baseConfig: default
+
 spring:
   cloud:
     gateway:
@@ -14,6 +36,11 @@ spring:
             # - Cookie=color, azul
             # - Header=Content-Type, application/json
             filters:
+            - name: CircuitBreaker
+              args:
+                name: products
+                statusCodes: 500, 404
+                fallbackUri: forward:/api/items/5
             - StripPrefix=2
             - name: SampleCookie
               args:
