agregando configuración de propiedades para diferentes perfiles y método para obtener configuraciones en el controlador de items

--- a/config-data/msvc-items.properties
+++ b/config-data/msvc-items.properties
@@ -1,2 +1,2 @@
 server.port=8005
-configuracion.texto=Configuración desde el servidor de configuración MSVC - Profile MSVC ITEMS
+configuracion.texto=Configuración desde el servidor de configuración MSVC - default
