--- a/msvc-gateway-server/src/main/resources/application.yml
+++ b/msvc-gateway-server/src/main/resources/application.yml
@@ -39,7 +39,7 @@ spring:
             - name: CircuitBreaker
               args:
                 name: products
-                statusCodes: 500, 404
+                statusCodes: 500
                 fallbackUri: forward:/api/items/5
             - StripPrefix=2
             - name: SampleCookie
