--- a/msvc-products/pom.xml
+++ b/msvc-products/pom.xml
@@ -65,6 +65,12 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>com.gaston.libs.msvc.commons</groupId>
+			<artifactId>libs-msvc-commons</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
