gestión de roles de usuario con la entidad Role, RoleRepository y actualizaciones de UserService y UserController para el manejo de roles

--- a/msvc-gateway-server/src/main/resources/application.yml
+++ b/msvc-gateway-server/src/main/resources/application.yml
@@ -56,4 +56,10 @@ spring:
             - AddRequestHeader=token-request, abc123
             - AddResponseHeader=token-response, xyz789
             - AddRequestParameter=nombre, pepe
+          - id: msvc-user
+            uri: lb://msvc-users
+            predicates:
+            - Path=/api/users/**
+            filters:
+            - StripPrefix=2
           
